test_suite/tests/ui/on-unimplemented/struct_variant.rs
use serde_derive::{Deserialize, Serialize};

struct NoImpls;

#[derive(Serialize, Deserialize)]
enum E {
    S { x1: u32, x2: NoImpls },
}

fn main() {}
